# cryn-rs

./: .gitignore  Cargo.toml  README.md
scripts/: .gitignore  Cargo.toml
src/: app.rs  icons.rs  lib.rs  main.rs  traits.rs
src/models/: course_definition.rs  course_event.rs  course_record.rs  course_span.rs  course_summary.rs  mod.rs  ordered_weekday.rs
src/services/: course_manager.rs  mod.rs
src/services/parsers/: mod.rs  standard_course_parser.rs  summary_parser.rs
src/utils/: mod.rs  ui.rs
src/views/: courses_view.rs  mod.rs  placeholder_view.rs
src/views/timetable_view/: colors.rs  landing.rs  layout_engine.rs  listener.rs  mod.rs  navbar.rs
src/windows/: import_window.rs  mod.rs
src/windows/main_window/: desktop.rs  mod.rs  nav_bar.rs  title_bar.rs
